Fix title wrapping on small screens on the blog page

--- a/_sass/blog.scss
+++ b/_sass/blog.scss
@@ -13,9 +13,10 @@ section.blog {
     article {
         display: grid;
         grid-template-columns: 100px 1fr max-content;
-        grid-template-rows: 2em calc(100px - 2em);
+        grid-template-rows: min-content 1fr;
         margin-bottom: 1em;
         column-gap: 0.5em;
+        row-gap: 0.5em;
         width: 100%;
 
         img {
@@ -24,7 +25,7 @@ section.blog {
             grid-row-end: span 2;
 
             width: 100%;
-            height: 100%;
+            aspect-ratio: 1 / 1;
         }
         h2 {
             font-size: 1.3em;
